[package]
name = "dmux"
version = "0.5.0"
authors = ["Zachary Thomas <zdcthomas@yahoo.com>"]
edition = "2018"

[profile.release]
codegen-units = 1

[dependencies]
clap = "~2.33.1"
config = '0.10.1'
dirs = "2.0.2"
grep-cli = "0.1"
regex = '1.3.7'
serde = "1.0"
serde_derive = "1.0"
skim = "0.8.1"
tmux_interface = "0.0.6"
url = '2.1.1'
walkdir = "2"
